--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white;
-  color: black;
   flex-direction: column;
 }
 
@@ -27,7 +25,7 @@
   text-align: center;
   width: 100%;
   height: 80px;
-  margin: 16px;
+  margin: 12px;
 }
 
 .myVourseCille-logo-img {
@@ -42,7 +40,7 @@
   background: white;
   border-radius: 12px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-  margin: 16px;
+  margin: 12px;
   padding: 16px;
 }
 
@@ -63,17 +61,17 @@
 }
 
 .myVourseCille-form header {
-  font-size: 32px;
-  font-weight: 500;
+  font-size: 28px;
+  font-weight: 600;
   text-align: center;
-  margin-bottom: 16px;
+  margin-bottom: 20px;
 }
 
 .myVourseCille-form input {
-  height: 60px;
+  height: 48px;
   width: 100%;
   padding: 0 16px;
-  font-size: 16px;
+  font-size: 20px;
   margin-bottom: 12px;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -84,29 +82,29 @@
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
 }
 
-.myVourseCille-form a {
-  font-size: 20px;
-  color: var(--myBlue);
-  text-decoration: none;
-}
-
 .myVourseCille-form a:hover {
   text-decoration: underline;
   color: var(--myHoverBlue);
 }
 
-.myVourseCille-form input.button {
+.myVourseCille-form .button {
+  height: 60px;
+  width: 100%;
   color: white;
   background: var(--myBlue);
   font-size: 24px;
-  font-weight: 500;
+  font-weight: 400;
+  padding: 0 16px;
+  margin: 16px 0;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
   letter-spacing: 1px;
-  margin-top: 16px;
   cursor: pointer;
   transition: 0.4s;
 }
 
-.myVourseCille-form input.button:hover {
+.myVourseCille-form .button:hover {
   background: var(--myHoverBlue);
 }
 
@@ -118,7 +116,7 @@
 
 .signup,
 .login {
-  font-size: 16px;
+  font-size: 20px;
 }
 .signup label,
 .login label {
@@ -138,7 +136,7 @@
   align-items: center;
   flex-direction: column;
   font-size: 16px;
-  margin: 16px;
+  margin: 12px;
 }
 
 .myVourseCille-version {
