--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
   --myOrange: #f59a23;
   --myError: #ed4337;
   --mySuccess: #5cb85c;
+  --myShadow: rgba(0, 0, 0, 0.2);
 }
 
 * {
@@ -13,7 +14,6 @@
   box-sizing: border-box;
 }
 
-/* Header */
 .myVourseCille-body {
   min-height: 100vh;
   width: 100%;
@@ -23,6 +23,7 @@
   flex-direction: column;
 }
 
+/* Header */
 .myVourseCille-logo {
   text-align: center;
   width: 100%;
@@ -41,7 +42,7 @@
   width: 100%;
   background: white;
   border-radius: 12px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 10px var(--myShadow);
   margin: 12px;
   padding: 16px;
 }
@@ -85,7 +86,7 @@
 }
 
 .myVourseCille-form .input input:focus {
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 0 var(--myShadow);
 }
 
 .myVourseCille-form a:hover {
@@ -150,6 +151,33 @@
 .login label:hover {
   text-decoration: underline;
   color: var(--myHoverBlue);
+}
+
+/* Popup */
+.popup {
+  position: fixed;
+  font-size: 16px;
+  top: -100px;
+  right: 20px;
+  background-color: var(--myBlue);
+  color: white;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 4px 8px var(--myShadow);
+  transition: top 1s ease-in-out, opacity 0.5s ease-in-out;
+  opacity: 0;
+  margin-top: 12px;
+}
+
+.popup.show {
+  opacity: 1;
+}
+
+.popup.hide {
+  top: -100px;
+  opacity: 0;
+  transition: top 1s ease-in-out, opacity 0.5s ease-in-out;
 }
 
 /* Footer */
